Fix card image alignment

--- a/engineering_diplomats/views/static/css/styles.css
+++ b/engineering_diplomats/views/static/css/styles.css
@@ -33,6 +33,16 @@ img {
     border: 1px solid #ccc;
 }
 
+.is-6by4 {
+    padding-top: 100%;
+    border: 1px solid #ccc;
+}
+.is-6by4 img {
+    position: absolute;
+    top: 25%;
+    border: unset;
+}
+
 .is-note {
     padding-top: 5px;
 }
